V3 Upgrade App Configuration API (#2981)
